Lista primera versión

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,15 @@
     <string name="ingresa_la_denuncia">Ingresa La Denuncia</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-2600751459304159~5853746422</string>
+    <string name="aoutus">Esta Aplicación nace de ver la necesidad de la gente de poder aceder a productos de necesidad basica a precios justos.
+De poder generar un canal de denuncias unificado, para que el volumen de la información haga que no se puedan ignorar nuestras denuncias, que no puedan hacer como que no existen. Porque creo que la avaricia no puede ser más importante que el hambre.\n\n
+
+Esta App esta todavía en etapa de desarrollo, a medida que vayan pasando los días voy a ir agregando y mejorando las funciones de la app. Tambien planeo agregar otras redes sociales para que cada denuncia pueda ser escuhada.\n\n
+
+Te pido disculpas si todavía no funciona lo bien que debería, poco a poco espero ir corriegiendo todos los errores. Si detectas un error y queres hacermelo saber, o si se te ocurre cualquier sugerencia para poder mejorar esta app; Por favor mandame un mail a la dirección de abajo. Que ni bien pueda lo voy a contestar.\n\n
+
+Muchas Gracias!\n
+FC Apps\n
+
+</string>
 </resources>
