--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="escrib_el_lugar">Escribí el lugar</string>
     <string name="escrib_tu_denuncia">Escribí tu Denuncia</string>
     <string name="denuncia_sin_foto">Denuncia Sin Foto</string>
-    <string name="denuncia_con_foto">Denuncia Con Foto</string>
     <string name="mira_las_denuncias">Mira las denuncias</string>
 
     <string name="todo">TODO</string>
@@ -40,4 +39,6 @@ Muchas Gracias!\n
 FC Apps\n
 
 </string>
+    <string name="listado_precios_acordados">Listado Precios Acordados</string>
+    <string name="denuncia_con_foto">Denuncia Con Foto</string>
 </resources>
