--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,9 @@
     <string name="ingresa_la_denuncia">Ingresa La Denuncia</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-2600751459304159~5853746422</string>
-    <string name="aoutus">Esta Aplicación nace de ver la necesidad de la gente de poder aceder a productos de necesidad basica a precios justos.
+    <string name="aoutus">Esta Aplicación nace de ver la necesidad de la gente de poder aceder a productos de necesidad basica a precios justos.\n\n
+        De poder acceder al listado completo de los Precios Cuidados. \n \n
+
 De poder generar un canal de denuncias unificado, para que el volumen de la información haga que no se puedan ignorar nuestras denuncias, que no puedan hacer como que no existen. Porque creo que la avaricia no puede ser más importante que el hambre.\n\n
 
 Esta App esta todavía en etapa de desarrollo, a medida que vayan pasando los días voy a ir agregando y mejorando las funciones de la app. Tambien planeo agregar otras redes sociales para que cada denuncia pueda ser escuhada.\n\n
@@ -39,6 +41,6 @@ Muchas Gracias!\n
 FC Apps\n
 
 </string>
-    <string name="listado_precios_acordados">Listado Precios Acordados</string>
+    <string name="listado_precios_acordados">Listado Precios Acordados y Precios Cuidados</string>
     <string name="denuncia_con_foto">Denuncia Con Foto</string>
 </resources>
