--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="todo">TODO</string>
     <string name="disclamer">Para poder publicar tu denuncia necesitamos conectar tu cuenta de twitter a nuestra App. Podes hacerlo ahora o más adelante desde el menu de la página principal. Más adelante esperamos poder ofrecerte mejores opciones y otras redes para publicar tus denuncias.</string>
     <string name="tu_denuncia">Tu Denuncia</string>
-    <string name="enviar_por_tweeter">Enviar por Tweeter</string>
+    <string name="enviar_por_tweeter">Enviar por Twiter</string>
     <string name="textview">TextView</string>
     <string name="complet_tu_denuncia">Completá Tu Denuncia</string>
     <string name="ingresa_tu_denuncia">Ingresa tu Denuncia</string>
@@ -29,7 +29,7 @@
 
     <string name="banner_ad_unit_id">ca-app-pub-2600751459304159~5853746422</string>
     <string name="aoutus">Esta Aplicación nace de ver la necesidad de la gente de poder aceder a productos de necesidad basica a precios justos.\n\n
-        De poder acceder al listado completo de los Precios Cuidados. \n \n
+        De poder conocer y acceder al listado completo de los Precios Cuidados, y los Precios Esenciales \n \n
 
 De poder generar un canal de denuncias unificado, para que el volumen de la información haga que no se puedan ignorar nuestras denuncias, que no puedan hacer como que no existen. Porque creo que la avaricia no puede ser más importante que el hambre.\n\n
 
@@ -41,6 +41,6 @@ Muchas Gracias!\n
 FC Apps\n
 
 </string>
-    <string name="listado_precios_acordados">Listado Precios Acordados y Precios Cuidados</string>
+    <string name="listado_precios_acordados">Lista Precios Cuidados\n Y Productos Esenciales</string>
     <string name="denuncia_con_foto">Denuncia Con Foto</string>
 </resources>
